@@ -1,3 +1,7 @@
+2007-03-06  Titus Brown  <t@localhost.localdomain>
+
+	* Fixed global_form selection on form set (Matt Singer).
+
 2007-02-18  Titus Brown  <t@localhost.localdomain>
 
 	* Added paste.lint tests into wsgi_intercept test code; fixed
